--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Voice Calendar Assistant</title>
+  <title>Alexo - AI Voice Calendar Assistant</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -17,6 +17,40 @@
       padding: 15px 30px;
       font-size: 18px;
       cursor: pointer;
+      border: none;
+      border-radius: 50px;
+      background-color: #4CAF50;
+      color: white;
+      transition: all 0.3s ease;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      margin: 0 auto;
+    }
+    #recordButton:hover {
+      background-color: #45a049;
+      transform: scale(1.02);
+    }
+    #recordButton.recording {
+      background-color: #ff4444;
+      animation: pulse 1.5s infinite;
+    }
+    #recordButton.recording:hover {
+      background-color: #ff3333;
+    }
+    @keyframes pulse {
+      0% {
+        transform: scale(1);
+      }
+      50% {
+        transform: scale(1.05);
+      }
+      100% {
+        transform: scale(1);
+      }
+    }
+    .mic-icon {
+      font-size: 24px;
     }
     #status, #result {
       margin: 20px 0;
@@ -104,7 +138,10 @@
 <body>
   <h1>Voice Calendar Assistant</h1>
   <div class="controls">
-    <button id="recordButton">Start Recording</button>
+    <button id="recordButton">
+      <span class="mic-icon">&#127908;</span>
+      Start Recording
+    </button>
   </div>
   <div id="status"></div>
   <div id="result"></div>
@@ -162,9 +199,9 @@
                   eventHtml = data.event.map(event => `
                     <div class="event-card">
                       <div class="event-time">
-                        <span><span class="event-icon">📅</span>${new Date(event.start.dateTime).toLocaleString()}</span>
+                        <span><span class="event-icon">&#128197;</span>${new Date(event.start.dateTime).toLocaleString()}</span>
                         <span class="event-duration">
-                          <span class="event-icon">⌚</span>${getEventDuration(event.start.dateTime, event.end.dateTime)}
+                          <span class="event-icon">&#128336;</span>${getEventDuration(event.start.dateTime, event.end.dateTime)}
                         </span>
                       </div>
                       <div class="event-summary"><a href="${event.htmlLink}" target="_blank">${event.summary}</a></div>
@@ -173,13 +210,13 @@
                         ''}
                       <div class="event-metadata">
                         ${event.location ? 
-                          `<div class="event-location"><span class="event-icon">📌</span>${event.location}</div>` : 
+                          `<div class="event-location"><span class="event-icon">&#128204;</span>${event.location}</div>` : 
                           ''}
                         ${event.attendees ? 
-                          `<div><span class="event-icon">👤</span>${event.attendees.length} attendee${event.attendees.length !== 1 ? 's' : ''}</div>` : 
+                          `<div><span class="event-icon">&#128483;</span>${event.attendees.length} attendee${event.attendees.length !== 1 ? 's' : ''}</div>` : 
                           ''}
                         ${event.hangoutLink ? 
-                          `<div><span class="event-icon">💻</span><a href="${event.hangoutLink}" target="_blank">Video call</a></div>` : 
+                          `<div><span class="event-icon">&#128421;</span><a href="${event.hangoutLink}" target="_blank">Video call</a></div>` : 
                           ''}
                       </div>
                     </div>
@@ -190,9 +227,9 @@
                 eventHtml = `
                   <div class="event-card">
                     <div class="event-time">
-                      <span><span class="event-icon">📅</span>${new Date(data.event.start.dateTime).toLocaleString()}</span>
+                      <span><span class="event-icon">&#128197;</span>${new Date(data.event.start.dateTime).toLocaleString()}</span>
                       <span class="event-duration">
-                        <span class="event-icon">⌚</span>${getEventDuration(data.event.start.dateTime, data.event.end.dateTime)}
+                        <span class="event-icon">&#128336;</span>${getEventDuration(data.event.start.dateTime, data.event.end.dateTime)}
                       </span>
                     </div>
                     <div class="event-summary"><a href="${data.event.htmlLink}" target="_blank">${data.event.summary}</a></div>
@@ -201,13 +238,13 @@
                       ''}
                     <div class="event-metadata">
                       ${data.event.location ? 
-                        `<div class="event-location"><span class="event-icon">📌</span>${data.event.location}</div>` : 
+                        `<div class="event-location"><span class="event-icon">&#128204;</span>${data.event.location}</div>` : 
                         ''}
                       ${data.event.attendees ? 
-                        `<div><span class="event-icon">👤</span>${data.event.attendees.length} attendee${data.event.attendees.length !== 1 ? 's' : ''}</div>` : 
+                        `<div><span class="event-icon">&#128483;</span>${data.event.attendees.length} attendee${data.event.attendees.length !== 1 ? 's' : ''}</div>` : 
                         ''}
                       ${data.event.hangoutLink ? 
-                        `<div><span class="event-icon">💻</span><a href="${data.event.hangoutLink}" target="_blank">Video call</a></div>` : 
+                        `<div><span class="event-icon">&#128421;</span><a href="${data.event.hangoutLink}" target="_blank">Video call</a></div>` : 
                         ''}
                     </div>
                   </div>
@@ -245,12 +282,12 @@
     recordButton.addEventListener('click', () => {
       if (mediaRecorder?.state === 'recording') {
         mediaRecorder.stop();
-        recordButton.textContent = 'Start Recording';
+        recordButton.innerHTML = '<span class="mic-icon">&#127908;</span>Start Recording';
         recordButton.classList.remove('recording');
         audioChunks = [];
       } else {
         mediaRecorder.start();
-        recordButton.textContent = 'Stop Recording';
+        recordButton.innerHTML = '<span class="mic-icon">&#128308;</span>Stop Recording';
         recordButton.classList.add('recording');
         result.textContent = '';
       }
